@@ -22,6 +22,7 @@ import art.enums.ArtAuthenticationMethod;
 import art.enums.LdapAuthenticationMethod;
 import art.enums.LdapConnectionEncryptionMethod;
 import art.enums.LoggerLevel;
+import art.smtpserver.SmtpServer;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import java.io.Serializable;
@@ -103,7 +104,22 @@ public class Settings implements Serializable {
 	private boolean clearTextPasswords; //used to enable import with passwords specified in clear text
 	private int jwtTokenExpiryMins = 60;
 	private boolean enableDirectReportEmailing;
+	private SmtpServer otherSmtpServer;
 	private String jsonOptions;
+
+	/**
+	 * @return the otherSmtpServer
+	 */
+	public SmtpServer getOtherSmtpServer() {
+		return otherSmtpServer;
+	}
+
+	/**
+	 * @param otherSmtpServer the otherSmtpServer to set
+	 */
+	public void setOtherSmtpServer(SmtpServer otherSmtpServer) {
+		this.otherSmtpServer = otherSmtpServer;
+	}
 
 	/**
 	 * @return the dateTimeFormat
