@@ -289,6 +289,19 @@ Settings configuration page
 							<form:errors path="smtpFrom" cssClass="error"/>
 						</div>
 					</div>
+					<div class="form-group">
+						<label class="col-md-4 control-label " for="otherSmtpServer">
+							<spring:message code="settings.label.smtpServer"/>
+						</label>
+						<div class="col-md-8">
+							<form:select path="otherSmtpServer" class="form-control selectpicker">
+								<form:option value="0">--</form:option>
+									<option data-divider="true"></option>
+								<form:options items="${smtpServers}" itemLabel="name" itemValue="smtpServerId"/>
+							</form:select>
+							<form:errors path="otherSmtpServer" cssClass="error"/>
+						</div>
+					</div>
 				</fieldset>
 
 				<fieldset>
